@@ -3,6 +3,7 @@
 - Added: Param "With auto revive if no player is nearby (less than 215m):" (description.ext d_with_autorevive, default 1, No, disabled)
 - Added: Headshot indicator and param to enable/disable it (d_show_headshots, default 0, disabled)
 - Added: More civilian unit types, by longtimegamer
+- Added: Emergency exit action menu entry for air vehicles in non ACE versions. Pops up if the air vehicle you are in can't move anymore or has damage
 - Changed: Respawn teammates 1 m behind squad leader position to avoid friendly fire, by longtimegamer
 - Fixed: Some armor being spawned when d_WithLessArmor set to none, by longtimegamer
 - Updated: Chinese translation by XenLau
